assets/css/components/_tiles.scss
$card-color: $govuk-brand-colour;
$card-shadow: 3px;

.app-tiles {
	display: grid;
	@include govuk-media-query($from: mobile) {
		grid-template-columns: 1fr!important;
	}
	@include govuk-media-query($from: tablet) {
		grid-template-columns: 1fr 1fr!important;
	}
	@include govuk-media-query($from: desktop) {
		grid-template-columns: 1fr 1fr 1fr!important;
	}
	width: 100%;
	grid-gap: (govuk-spacing(3) + 4px) govuk-spacing(3);
}

.app-tile {
	background-color: govuk-colour("light-grey");
	padding: govuk-spacing(5) govuk-spacing(5) govuk-spacing(3);
	border-top: 4px solid $govuk-brand-colour;
	box-sizing: border-box;
	@include govuk-media-query($from: tablet) {
		min-height: 150px;
	}
	padding-right: 40px;

	* {
		@include govuk-font($size: 16);
		color: black!important;
	}

	h4 {
		@include govuk-font($size: 19, $weight: bold);
		margin-bottom: govuk-spacing(1);
		color: $govuk-brand-colour!important;
		text-decoration: underline;
	}

	p {
		line-height: 1.5;
	}

	a {
		color: $govuk-brand-colour!important;
	}

	&:focus {
		box-shadow: none!important;
	}
}

.navigation {
    position: relative;
    border-bottom: 1px solid #bfc1c3;

    width: 100%;
    float: left;
	color: #0b0c0c;
}

.home-link {
    color: #0b0c0c !important;
    float: left;
    display: inline-block;
    padding: 12px 16px 8px 22px;
    text-decoration: none;
	&:hover {
		border-bottom: 4px solid #bfc1c3;
	}
}

.nav-items {
    float: right;
    margin: 0;

	li,a {
		display: inline-block;
		text-decoration: none;
		color: #0b0c0c;
		padding: 5px 14px 5px 0px;
	}
	&:hover {
		border-bottom: 4px solid #bfc1c3;
	}
}

